--- a/game/index.html
+++ b/game/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Document</title>
+  <title>Mario in Underwater</title>
   <script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk="
     crossorigin="anonymous"></script>
   <link rel="stylesheet" href="./css/style.css" />
@@ -14,13 +14,12 @@
     @import url("http://fonts.cdnfonts.com/css/new-super-mario-font-u");
   </style>
 
-
 </head>
 
 <body>
-  <iframe src="./assets/silence.mp3" allow="autoplay" id="bgm" style="display:none" frameborder="0"></iframe>
+  <iframe src="assets/silence.mp3" allow="autoplay" id="bgm" style="display:none" frameborder="0"></iframe>
   <audio id="bgm" autoplay>
-    <source src="./assets/Underwater.mp3">
+    <source src="assets/Underwater.mp3">
   </audio>
   <div class="container">
     <div class="background"></div>
