json 객체 다루기

--- a/ajax/ajax2.html
+++ b/ajax/ajax2.html
@@ -14,6 +14,11 @@
 		$('#get_data_button').click(function (){
 			//get 방식
 			$('#demo').load('ajax_info.txt');
+			$.getJSON('people.json', function(json){
+				console.log(json);
+				$('#demo').html(JSON.stringify(json))
+				$('#demo').html(`${json.name}:${json.skill}`);
+			})
 		});
 	});
 </script>
