파라미터 넘기기, 댓글 보기

--- a/ajax/exam03.html
+++ b/ajax/exam03.html
@@ -17,7 +17,7 @@
 				// for (let i = 0; i < jsonArray.length; i++)
 				let $list = $('#list');
 				jsonArray.forEach((data, i) => {
-					$list.append(`<li>${i}, ${data.titile}</li>`);
+					$list.append(`<li>${i}, ${data.title}</li>`);
 				}) 
 				console.log(jsonArray);
 			});
