--- a/ajax/movieDetail.html
+++ b/ajax/movieDetail.html
@@ -33,7 +33,7 @@
 			width: 200px;
 		}
 
-		div #openDay {
+		#openDay {
 			display: inline-block;
 			position: relative;
 			left: 210px;
@@ -41,11 +41,11 @@
 			overflow: visible;
 		}
 
-		div .card {
+		.card {
 			margin: 0 auto;
 		}
 
-		div #voteAverage {
+		#voteAverage {
 			display: inline;
 			position: relative;
 			background-color: rgb(0, 191, 255);
@@ -59,7 +59,7 @@
 			box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
 		}
 
-		div #voteCount {
+		#voteCount {
 			display: inline;
 			position: relative;
 			background-color: rgb(0, 191, 255);
@@ -87,6 +87,12 @@
 			font-size: 30px; 
 			margin : 10px; 
 			color: blue
+		}
+
+		#back {
+			width: 70px; 
+			margin: 0 auto; 
+			display: block;
 		}
 	</style>
 	<script>
@@ -123,7 +129,7 @@
 	</script>
 
 	<div class="comments"></div>
-	<br><button id="back" style="width: 70px; margin: 0 auto; display: block;" onclick="comeBack()">돌아가기</button>
+	<br><button id="back" onclick="comeBack()">돌아가기</button>
 
 </body>
 
