--- a/ajax/movieList.html
+++ b/ajax/movieList.html
@@ -28,7 +28,7 @@
 			box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
 		}
 
-		span .container {
+		.container {
 			padding: 2px 16px;
 			display: block;
 			margin: 0px auto;
